# cogl

./: Makefile.am  configure.ac  custom-config  smart.mk  smartfile
cogl/: smart.mk
cogl-pango/: smart.mk
doc/: RELEASING
examples/: crate.mk  hello.mk  smart.mk  x11-foreign.mk  x11-tfp.mk
